--- a/app/src/main/res/layout/activity_layout_course_detail.xml
+++ b/app/src/main/res/layout/activity_layout_course_detail.xml
@@ -2,69 +2,167 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/color_white"
     android:orientation="vertical">
 
     <include layout="@layout/title_toolbar" />
-
-    <ImageView
-        android:id="@+id/image_course"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:scaleType="fitCenter" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5dp">
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image_course"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/icon" />
+
+            <TextView
+                android:id="@+id/course_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:text="课程名称"
+                android:textColor="@color/transparent_80"
+                android:textSize="22sp" />
+
 
             <TextView
                 android:id="@+id/course_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp"
-                android:text="11111" />
+                android:text="张贱人"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/course_publishing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="center"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp"
-                android:text="11111" />
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@+id/course_author"
+                android:text="人民出版社"
+                android:textSize="14sp" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="简介"
+                    android:textColor="@color/transparent_80"
+                    android:textSize="22sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/transparent_10" />
+
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/course_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/course_author"
-                android:layout_gravity="center"
                 android:layout_margin="5dp"
                 android:text="12111111111111111111111111111111111111"
                 android:textColor="@color/transparent_60"
-                android:textSize="14sp" />
+                android:textSize="16sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="5dp"
+                android:background="@color/transparent_10" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|center"
+                    android:layout_marginTop="5dp"
+                    android:text="目录" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:background="@color/transparent_10" />
+
+                <TextView
+                    android:id="@+id/course_dictionary"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:text="1.aaaaaaaa
+2sdasdsa
+daasda
+adadad
+asdadad" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="5dp"
+                android:background="@color/transparent_10" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="内容"
+                    android:textColor="@color/transparent_80"
+                    android:textSize="22sp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/transparent_10" />
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/course_content"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/course_desc"
-                android:layout_gravity="center"
                 android:layout_margin="5dp"
                 android:text="12111111111111111111111111111111111111"
                 android:textColor="#000000"
                 android:textSize="16sp" />
 
-        </RelativeLayout>
+        </LinearLayout>
+
     </ScrollView>
 
 </LinearLayout>
