--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="main_color">#F44336</color>
     <color name="white">#ffffff</color>
     <color name="transparent">#00000000</color>
+    <color name="transparent_10">#11000000</color>
     <color name="transparent_20">#33000000</color>
     <color name="transparent_30">#4D000000</color>
     <color name="transparent_40">#40000000</color>
